samples/_failures_safe/1761360439_0b455d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_67103f2f.c: In function ‘main’:
./samples/SAFE/__tmp_67103f2f.c:138:5: error: expected declaration or statement at end of input
  138 |     print_matrix(&mat2, "B");
      |     ^~~~~~~~~~~~
